# ecommerce-research-agent

./: .dockerignore  .envrc  .gitignore  Dockerfile  README.md  docker-compose.yaml  env.example  poetry.toml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 8ce936915c0b_initial_migration_create_analysis_.py
data/: market_data.json  market_trends.json  products.json  retailer_config.json  retailers.json  reviews.json
reports/: Unknown_Product_report_20250921_164428.html  Unknown_Product_report_20250921_164428.md  iPhone_15_Pro_report_20250921_162524.html  iPhone_15_Pro_report_20250921_162524.md
scripts/: 00-install-prerequisites.sh  01-setup_database.sh
src/: config.py  exceptions.py
src/api/: main.py
src/api/models/analysis/: requests.py  responses.py
src/api/models/common/: base.py
src/api/models/health/: __init__.py  responses.py
src/api/routes/: analysis.py  health.py
src/api/services/: database_service.py  research.py
src/database/: database.py
src/database/models/: analysis_history.py  base.py
src/llm/: agent.py  prompt.py
src/llm/tools/: exit_program.py  market_trend_analysis.py  report_generator.py  sentiment_analysis.py  webscraping.py
template/: analysis_still_running.html
tests/: test_error_handling.py  test_orchestration.py  test_tools.py  test_validation.py
