[tool.poetry]
name = "ecommerce-research-agent"
version = "0.1.0"
description = "AI-powered e-commerce research and market analysis agent"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = ">=0.116.2,<0.117.0"
pydantic = ">=2.11.9,<3.0.0"
alembic = ">=1.16.5,<2.0.0"
pydantic-ai = ">=1.0.9,<2.0.0"
anthropic = ">=0.68.0,<0.69.0"
ollama = ">=0.5.4,<0.6.0"
sqlalchemy = ">=2.0.43,<3.0.0"
logfire = ">=4.8.0,<5.0.0"
fastmcp = ">=2.12.3,<3.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
loguru = ">=0.7.3,<0.8.0"
uvicorn = ">=0.36.0,<0.37.0"
tqdm = ">=4.67.1,<5.0.0"
opentelemetry-instrumentation-fastapi = ">=0.58b0,<0.59"
opentelemetry-instrumentation-sqlite3 = ">=0.58b0,<0.59"
fuzzywuzzy = ">=0.18.0,<0.19.0"
python-levenshtein = ">=0.27.1,<0.28.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.13.1,<0.14.0"
pytest = ">=8.4.2,<9.0.0"

[tool.poetry.scripts]
start-api = "src.api.main:start_server"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 132
indent-width = 4
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]
ignore = [
    "E501", # line-too-long - allow long strings, ruff format already wraps statements.
]